--- a/style.css
+++ b/style.css
@@ -4,11 +4,17 @@
     box-sizing: border-box;
 }
 
+p{
+    font-family: sans-serif;
+    font-weight: 300px;
+}
 
 header{
     height: 120px;
-    border: 1px dashed red;
-    position: relative;
+}
+
+main{
+    margin: 0 auto;
 }
 
 .logo{
@@ -35,6 +41,10 @@ a{
     text-decoration: none;
 }
 
+a:hover{
+    text-decoration: underline;
+}
+
 .fixed{
     display: flex;
     position: fixed;
@@ -59,7 +69,7 @@ a{
 .start{
     width: 100px;
     height: 60px;
-    background-color: rgba(0, 42, 255, 0.7);
+    background-color: #0061fe;
     margin-right: 30px;
     border: none;
 }
@@ -68,6 +78,79 @@ a{
     color: white;
 }
 
+.try-free{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 800px;
+    background-color: #6099f5de;
+    
+}
+
+.text{
+    display: flex;
+    flex-direction: row;
+}
 
 
+h1{
+    font-family: "Sharp Grotesk 23", "Sharp Grotesk 23 KR", "Sharp Grotesk 23 Thai", "Helvetica (Sharp Grotesk 23 Fallback)", "Arial (Sharp Grotesk 23 Fallback)", -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    text-align: center;
+    font-size: 120px;
+    margin-left: 20px;
+}
 
+.container-text-img{
+    margin-top: 30px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    position: relative;
+    width: 100%;
+}
+
+.paragraph{
+    display: flex;
+    flex-direction: column;
+    width: 500px;
+    height: 300px;
+}
+
+.paragraph > p{
+    font-size: 25px;
+    line-height: 40px;
+}
+
+.jumbo{  
+    display: flex;
+    flex-direction: column;
+    width: 1000px;
+    height: 500px;
+}
+
+.button-try{
+    width: 70px;
+    height: 35px;
+    border: 1px solid lime;
+}
+
+.blue-button{
+    width: 400px;
+}
+
+.blue-button > button{
+    margin-top: 15px;
+    margin-bottom: 15px;
+    border: none;
+    background-color: #0061fe;
+    padding: 10px;
+    font-size: 30px;
+}
+
+.blue-button  button a{
+    color: white;
+}
+
+.white-button > a {
+    color: black;
+}
