--- a/style.css
+++ b/style.css
@@ -579,7 +579,6 @@ h1{
 .container-ask{
     width: 1280px;
     margin: auto;
-    
 }
 
 .container-ask > h2{
@@ -602,8 +601,34 @@ h1{
     margin-top: 60px;
 }
 
-.black-container{
+footer{
     width: 100%;
     height: 600px;
     background-color: #000000;
+}
+
+.black-container{
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    width: 65%;
+    margin: auto;
+}
+
+.flex-item{
+    line-height: 50px;
+    margin-top: 80px;
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+}
+
+.flex-item a {
+    color: white;
+}
+
+.flex-item > h2{
+    color: white;
+    margin-bottom: 50px;
+    font-size: 35px;
 }
